bk_ida/gccida/c0/canon_true_dependence
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_true_dependence/src/alias.c:2567:38: error: must use 'enum' tag to refer to type 'machine_mode'
int  canon_true_dependence( rtx mem, machine_mode mem_mode, rtx mem_addr, rtx x, int ( *varies)( rtx, int)) 
                                     ^
                                     enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_true_dependence/src/alias.c:2585:45: error: use of undeclared identifier 'machine_mode'
if ( !base_alias_check( x_addr, mem_addr, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), mem_mode) ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_true_dependence/src/alias.c:2585:60: error: expected expression
if ( !base_alias_check( x_addr, mem_addr, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), mem_mode) ) 
                                                           ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_true_dependence/src/obj/alias.o] Error 1
